infra/k8s/booking-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rollin-booking-depl
spec:
  replicas: 3
  selector:
    matchLabels:
      app: booking
  template:
    metadata:
      labels:
        app: booking
    spec:
      containers:
      - name: booking
        image: kiran6177/rollin-booking
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 4004
---
apiVersion: v1
kind: Service
metadata:
  name: booking-svc
spec:
  selector:
    app: booking
  ports:
  - name: booking
    protocol: TCP
    port: 4004
    targetPort: 4004
