infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-svc
  annotations:
    specs.ingressClassName: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: rollin.online
    http:
      paths:
      - pathType: ImplementationSpecific
        path: "/api/?(.*)"
        backend:
          service:
            name: api-svc
            port:
             number: 4000
